[#110] Added getting services status via REST
